Fix timeline component margin alignment
Fixes issue introduced in f83ea43d

--- a/scss/_timeline.scss
+++ b/scss/_timeline.scss
@@ -17,7 +17,7 @@
     display: flex;
 
     strong {
-      margin-block-start: var(--year-item-space) + var(--year-section-space);
+      margin-block-start: calc(var(--year-item-space) + var(--year-section-space));
       font-weight: 600;
     }
 
